fix overlap header to cat box

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ header {
     position: fixed;
     width: 100vw;
     background-color: #2a363b;
+    margin-bottom: 1px;
     padding-bottom: 1px;
 }
 
@@ -40,13 +41,15 @@ header {
 }
 
 .cat-box {
-    padding: 1px;
+    padding: 60px;
+    margin-top: 1px;
+    padding-top: 100px;
     display: flex;
     justify-content: center;
 }
 
 .cat-image {
-    margin: 20px auto;
+    margin: 20px;
     width: 500px;
     height: 500px;
     background-color: #03131a;
